Fix issue with date and content with title
* If we display a date with title in the content of the page
the title is "h2" and too big for the label

--- a/scss/syllabus.scss
+++ b/scss/syllabus.scss
@@ -135,6 +135,11 @@
             @include sfield-style-with-icon;
             margin: 1em auto;
             width: fit-content;
+            h2 {
+                font-size: xx-small;
+                margin: 0.5em;
+                margin-right: 2em;
+            }
         }
     }
     .syllabus-side {
